--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "d2l-colors": "^2.3.0",
     "d2l-dropdown": "^5.0.6",
     "d2l-icons": "^3.2.0",
+    "d2l-image-selector": "git://github.com/Brightspace/image-selector#^1.0.4",
     "d2l-link": "^3.5.0",
     "d2l-loading-spinner": "^5.0.4",
     "d2l-menu": "^0.3.5",
@@ -41,6 +42,7 @@
     "d2l-organization-hm-behavior": "git://github.com/Brightspace/organization-hm-behavior.git#^1.0.1",
     "d2l-performance": "^0.0.4",
     "d2l-polymer-behaviors": "<1.0.0",
+    "d2l-simple-overlay": "git://github.com/Brightspace/simple-overlay#^1.1.1",
     "d2l-typography": "^5.4.0",
     "fetch": "^2.0.3",
     "iron-a11y-announcer": "^1.0.5",
