Switch to d2l-fetch from d2l-authify
These are more or less equivalent, but d2l-fetch is a more fleshed out approach, with middlewares and such. Note that this is a breaking change, as `d2l-image-banner-overlay` will now require the consumer to set up the appropriate middlewares; in particular, `d2l-fetch-auth` is required.

--- a/bower.json
+++ b/bower.json
@@ -30,11 +30,11 @@
   "dependencies": {
     "app-localize-behavior": "PolymerElements/app-localize-behavior#^1.0.2",
     "d2l-alert": "^2.0.0",
-    "d2l-authify-import": "https://github.com/Brightspace/d2l-authify-import.git#^0.4.0",
     "d2l-colors": "^2.3.0",
     "d2l-dropdown": "^5.0.6",
+    "d2l-fetch": "Brightspace/d2l-fetch#^1.5.1",
     "d2l-icons": "^3.2.0",
-    "d2l-image-selector": "git://github.com/Brightspace/image-selector#^1.1.0",
+    "d2l-image-selector": "git://github.com/Brightspace/image-selector#^2.0.1",
     "d2l-link": "^3.5.0",
     "d2l-loading-spinner": "^5.0.4",
     "d2l-menu": "^0.3.5",
@@ -53,5 +53,8 @@
     "iron-pages": "^1.0.8",
     "polymer": "^1.7.0",
     "promise-polyfill": "PolymerLabs/promise-polyfill#^1.0.1"
+  },
+  "devDependencies": {
+    "web-component-tester": "^6.3.0"
   }
 }
