--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
 language: node_js
 node_js:
-- 5
+- 6
 sudo: false
-addons:
-  firefox: latest
-  apt:
-    packages:
-      - oracle-java8-installer
-      - oracle-java8-set-default
 before_script:
 - npm run test:lint:js
+- npm run test:lint:wc
 script:
 - xvfb-run wct
