--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,6 @@
     "/demo/"
   ],
   "dependencies": {
-    "app-localize-behavior": "PolymerElements/app-localize-behavior#^1.0.2",
     "d2l-alert": "^2.0.1",
     "d2l-colors": "^2.4.0",
     "d2l-dropdown": "^5.2.1",
@@ -37,6 +36,7 @@
     "d2l-image-selector": "git://github.com/Brightspace/image-selector#^2.1.0",
     "d2l-link": "^3.5.1",
     "d2l-loading-spinner": "^5.0.5",
+    "d2l-localize-behavior": "^1.0.1",
     "d2l-menu": "^0.3.7",
     "d2l-organization-hm-behavior": "git://github.com/Brightspace/organization-hm-behavior.git#^1.1.0",
     "d2l-simple-overlay": "git://github.com/Brightspace/simple-overlay#^1.1.2",
