adding an explicit resolution for webcomponentjs polyfill

--- a/bower.json
+++ b/bower.json
@@ -46,5 +46,8 @@
   },
   "devDependencies": {
     "web-component-tester": "^6.4.0"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^0.7.24"
   }
 }
