--- a/bower.json
+++ b/bower.json
@@ -28,28 +28,45 @@
     "wct.conf.json"
   ],
   "dependencies": {
-    "d2l-alert": "^2.0.1",
-    "d2l-colors": "^2.4.0",
-    "d2l-dropdown": "^5.2.1",
+    "d2l-alert": "^3.0.1",
+    "d2l-colors": "^3.1.2",
+    "d2l-dropdown": "^6.0.7",
     "d2l-fetch": "Brightspace/d2l-fetch#^1.8.0",
-    "d2l-icons": "^3.7.0",
+    "d2l-icons": "^4.6.1",
     "d2l-image-selector": "git://github.com/Brightspace/image-selector#^2.2.0",
-    "d2l-link": "^3.5.1",
-    "d2l-loading-spinner": "^5.0.5",
+    "d2l-link": "^4.0.1",
+    "d2l-loading-spinner": "^6.0.2",
     "d2l-localize-behavior": "^1.1.0",
-    "d2l-menu": "^0.3.7",
+    "d2l-menu": "^1.0.4",
     "d2l-organization-hm-behavior": "git://github.com/Brightspace/organization-hm-behavior.git#^2.0.0",
     "d2l-simple-overlay": "git://github.com/Brightspace/simple-overlay#^1.1.2",
-    "d2l-typography": "^5.5.0",
-    "iron-scroll-threshold": "PolymerElements/iron-scroll-threshold#^1.0.3",
-    "polymer": "^1.11.2"
+    "d2l-typography": "^6.1.2",
+    "iron-scroll-threshold": "PolymerElements/iron-scroll-threshold#^2.0.0",
+    "polymer": "1 - 2"
   },
   "devDependencies": {
     "fetch": "whatwg-fetch#^2.0.3",
-    "promise-polyfill": "PolymerLabs/promise-polyfill#^1.0.1",
+    "promise-polyfill": "PolymerLabs/promise-polyfill#^2.0.1",
     "web-component-tester": "^6.5.0"
   },
+  "variants": {
+    "1.x": {
+      "dependencies": {
+        "polymer": "^1.11.2"
+      },
+      "resolutions": {
+        "webcomponentsjs": "^0.7"
+      }
+    }
+  },
   "resolutions": {
-    "webcomponentsjs": "^0.7.24"
+    "d2l-colors": "^3.1.2",
+    "d2l-icons": "^4.6.1",
+    "d2l-loading-spinner": "^6.0.2",
+    "d2l-typography": "^6.1.2",
+    "d2l-polymer-behaviors": "^1.2.0",
+    "iron-iconset-svg": "^2.1.0",
+    "d2l-offscreen": "^3.0.3",
+    "webcomponentsjs": "^v1.0.19"
   }
 }
