--- a/bower.json
+++ b/bower.json
@@ -47,7 +47,11 @@
   "devDependencies": {
     "fetch": "whatwg-fetch#^2.0.3",
     "promise-polyfill": "PolymerLabs/promise-polyfill#^2.0.1",
-    "web-component-tester": "^6.5.0"
+    "web-component-tester": "^6.5.0",
+    "iron-component-page": "^2.0.0",
+    "iron-demo-helpers": "^2.0.0",
+    "iron-test-helpers": "^2.0.0",
+    "sinonjs": "^1.17.1"
   },
   "variants": {
     "1.x": {
