--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "polymer install",
     "test": "npm run lint && polymer test --skip-plugin sauce",
     "lint": "npm run lint:js && npm run lint:wc",
-    "lint:js": "eslint --ext .js,.html .",
+    "lint:js": "eslint --ext .js,.html --ignore-pattern /bower_components-1.x/* .",
     "lint:wc": "polymer lint"
   },
   "homepage": "https://github.com/Brightspace/d2l-image-banner-overlay",
