--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
     "d2l-localize-behavior": "^1.1.0",
     "d2l-menu": "^1.0.4",
     "d2l-organization-hm-behavior": "git://github.com/Brightspace/organization-hm-behavior.git#^2.0.0",
+    "d2l-polymer-behaviors": "^1.2.0",
     "d2l-simple-overlay": "git://github.com/Brightspace/simple-overlay#^2.0.0",
     "d2l-typography": "^6.1.2",
     "iron-scroll-threshold": "PolymerElements/iron-scroll-threshold#^2.0.0",
