--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "polymer install --variants",
+    "build": "gulp build",
     "test": "npm run lint && polymer test --skip-plugin sauce",
     "lint": "npm run lint:js && npm run lint:wc",
     "lint:js": "eslint --ext .js,.html --ignore-pattern /bower_components-1.x/* .",
@@ -29,6 +30,12 @@
     "eslint": "^4.16.0",
     "eslint-config-brightspace": "^0.4.0",
     "eslint-plugin-html": "^4.0.2",
-    "polymer-cli": "^1.5.7"
+    "gulp": "^4.0.0",
+    "gulp-cli": "^2.0.1",
+    "gulp-ejs": "^3.1.3",
+    "gulp-rename": "^1.2.3",
+    "merge-stream": "^1.0.1",
+    "polymer-cli": "^1.5.7",
+    "require-dir": "^1.0.0"
   }
 }
