--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,14 @@ language: node_js
 node_js: node
 script:
 - npm run lint
-- 'if [ "$TRAVIS_SECURE_ENV_VARS" = "true" ]; then npm run test:polymer:sauce; fi'
-- 'if [ "$TRAVIS_SECURE_ENV_VARS" = "false" ]; then npm run test:polymer:local; fi'
+- |
+  if [ $TRAVIS_PULL_REQUEST != false ] && [ $TRAVIS_SECURE_ENV_VARS == true ]; then
+    echo "Pull request with secure environment variables, running Sauce tests...";
+    npm run test:polymer:sauce || travis_terminate 1;
+  else
+    echo "Not a pull request and/or no secure environment variables, running headless tests...";
+    npm run test:polymer:local || travis_terminate 1;
+  fi
 env:
   global:
   - SAUCE_USERNAME: Desire2Learn
