--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "d2l-image-banner-overlay",
   "description": "Brightspace Course Image Banner Overlay",
-  "private": true,
-  "scripts": {
-    "postinstall": "polymer install --variants",
-    "build": "gulp build",
-    "lint": "npm run lint:js && npm run lint:wc",
-    "lint:js": "eslint --ext .js,.html --ignore-pattern /bower_components-1.x/* .",
-    "lint:wc": "polymer lint",
-    "test": "npm run lint && npm run test:polymer:local",
-    "test:polymer:local": "polymer test --skip-plugin sauce",
-    "test:polymer:sauce": "polymer test --skip-plugin local"
-  },
-  "homepage": "https://github.com/Brightspace/d2l-image-banner-overlay",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Brightspace/d2l-image-banner-overlay.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Brightspace/d2l-image-banner-overlay/issues"
-  },
   "keywords": [
     "d2l",
     "course",
     "homepage",
     "banner"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Brightspace/d2l-image-banner-overlay.git"
+  },
+  "homepage": "https://github.com/Brightspace/d2l-image-banner-overlay",
+  "name": "d2l-image-banner-overlay",
+  "scripts": {
+    "build": "gulp build",
+    "lint": "npm run lint:wc && npm run lint:js",
+    "lint:js": "eslint . --ext .js,.html test/**/*.js test/**/*.html demo/**/*.js demo/**/*.html",
+    "lint:wc": "polymer lint",
+    "test": "npm run lint && npm run test:polymer:local",
+    "test:polymer:local": "polymer test --skip-plugin sauce",
+    "test:polymer:sauce": "polymer test --skip-plugin local"
+  },
+  "bugs": {
+    "url": "https://github.com/Brightspace/d2l-image-banner-overlay/issues"
+  },
   "author": "D2L Corporation",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@polymer/iron-component-page": "^3.0.0-pre.18",
+    "@polymer/iron-demo-helpers": "^3.0.0-pre.18",
+    "@polymer/iron-test-helpers": "^3.0.0-pre.18",
+    "@polymer/promise-polyfill": "^3.0.0-pre.18",
+    "@webcomponents/webcomponentsjs": "^2.2.1",
+    "babel-eslint": "^10.0.1",
     "eslint": "^4.16.0",
     "eslint-config-brightspace": "^0.4.0",
     "eslint-plugin-html": "^4.0.2",
@@ -37,7 +42,36 @@
     "gulp-ejs": "^3.1.3",
     "gulp-rename": "^1.2.3",
     "merge-stream": "^1.0.1",
-    "polymer-cli": "^1.5.7",
-    "require-dir": "^1.0.0"
+    "polymer-cli": "^1.9.2",
+    "require-dir": "^1.0.0",
+    "wct-browser-legacy": "^1.0.1",
+    "whatwg-fetch": "^2.0.0"
+  },
+  "version": "",
+  "resolutions": {
+    "inherits": "2.0.3",
+    "samsam": "1.1.3",
+    "supports-color": "3.1.2",
+    "type-detect": "1.0.0"
+  },
+  "main": "d2l-image-banner-overlay.js",
+  "dependencies": {
+    "d2l-alert": "BrightspaceUI/alert#semver:^4",
+    "d2l-colors": "BrightspaceUI/colors#semver:^4",
+    "d2l-dropdown": "BrightspaceUI/dropdown#semver:^7",
+    "d2l-fetch": "Brightspace/d2l-fetch.git#semver:^2",
+    "d2l-icons": "BrightspaceUI/icons#semver:^6",
+    "d2l-image-selector": "Brightspace/image-selector#semver:^4",
+    "d2l-link": "BrightspaceUI/link#semver:^5",
+    "d2l-loading-spinner": "BrightspaceUI/loading-spinner#semver:^7",
+    "d2l-localize-behavior": "BrightspaceUI/localize-behavior#semver:^2",
+    "d2l-menu": "BrightspaceUI/menu#semver:^2",
+    "d2l-organization-hm-behavior": "Brightspace/organization-hm-behavior#semver:^3",
+    "d2l-polymer-behaviors": "Brightspace/d2l-polymer-behaviors-ui#semver:^2",
+    "d2l-simple-overlay": "Brightspace/simple-overlay.git#semver:^3",
+    "d2l-typography": "BrightspaceUI/typography#semver:^7",
+    "@polymer/iron-scroll-threshold": "^3.0.0-pre.18",
+    "@polymer/polymer": "^3.0.0",
+    "siren-parser": "^8.0.0"
   }
 }
